H3CIPMSJAVA-20180830/src/objects/Account_Industry__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>City</label>
        <referenceTo>City__c</referenceTo>
        <relationshipName>IndustryToCity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>电信</fullName>
                </value>
                <value>
                    <fullName>公共</fullName>
                </value>
                <value>
                    <fullName>金融</fullName>
                </value>
                <value>
                    <fullName>商业</fullName>
                </value>
                <value>
                    <fullName>网络</fullName>
                </value>
                <value>
                    <fullName>制造</fullName>
                </value>
                <value>
                    <fullName>other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Province</label>
        <referenceTo>City__c</referenceTo>
        <relationshipName>IndustryToProvince</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account Industry</label>
    <nameField>
        <label>客户名称</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>